novas imagens adicionas e criação de duas novas seções em index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                     <li>
                         <a href="#economy" title="Ir para a seção de notícias">Economia</a>
                     </li>
+                    <li>
+                        <a href="#entertainment" title="Ir para a seção de notícias">Entretenimento</a>
+                    </li>
+                    <li>
+                        <a href="#technology" title="Ir para a seção de notícias">Tecnologia</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -107,6 +113,87 @@
                         <time>13/07/2022 às 12:35</time>
                     </header>
                     <h3>Alta no preço do barril do petróleo</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>    
+            </div>
+        </div>
+     </section>
+     <section id="entertainment">
+        <div class="container">
+            <h2>Entretenimento</h2>
+            <div class="articles">
+                
+            <article>
+                <img src="./imagens/cinema.jpeg" alt="Rolo de filme com fundo laranja" />
+                <header>
+                    <time>10/08/2023 às 12:00</time>
+                </header>
+                <h3>Novo filme será lançado no cinema</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                </p>
+                <a href="#" title="Leia a notícia completa">Ler mais</a>
+            </article>
+            <article>
+                <img src="./imagens/festival.jpeg" alt="Grupo de pessoas em uma festa" />
+                <header>
+                    <time>15/06/2022 às 08:15</time>
+                </header>
+                <h3>Festival de música eletrônica divulga data</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                </p>
+                <a href="#" title="Leia a notícia completa">Ler mais</a>
+            </article>
+            <article>
+                <img src="./imagens/realidadevirtual.jpeg" title="Duas mulheres com óculos de realidade virtual" />
+                <header>
+                    <time>10/06/2022 às 20:12</time>
+                </header>
+                <h3>Realidade virtual ganha cada vez mais usuários</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                </p>
+                <a href="#" title="Leia a notícia completa">Ler mais</a>
+            </article>
+            </div>
+        </div>
+    </section>
+    <section id="technology">
+        <div class="container">
+            <h2>Tecnologia</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/robotica.jpeg" alt="Robo humanoide com cabos saindo de suas costas" />
+                    <header>
+                        <time>20/07/2022 às 10:10</time>
+                    </header>
+                    <h3>Robos humanóides são a nova aposta da indústria robótica</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/computacao.jpeg" alt="notebook aberto em cima de uma mesa" />
+                    <header>
+                        <time>15/05/2022 às 11:11</time>
+                    </header>
+                    <h3>Entenda o que é computação quântica</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/cursostech.png" alt="Holograma com icones" />
+                    <header>
+                        <time>07/07/2022 às 12:12</time>
+                    </header>
+                    <h3>Cursos sobre programção explodem na internet</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                     </p>
